--- a/styles.css
+++ b/styles.css
@@ -54,4 +54,6 @@ footer a {
   font-family: 'Josefin Sans', sans-serif;
   color: white;
   text-decoration: none;
+  display: block;
+  clear: left;
 }
