--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ nav a {
   color: #4354A3;
   margin: 10px 20px;
   transition: color 2s ease,
-  font-size 2s ease;
+    font-size 2s ease;
   font-size: 1em;
 }
 
@@ -34,16 +34,20 @@ nav a:hover {
   color: rgb(62, 143, 189);
   font-size: 2em;
 }
+
 /* slider */
 .slidecontainer {
   width: 100%;
 }
+
 .slider {
   width: 100%;
 }
+
 #year {
   color: white;
 }
+
 /* main styles */
 main {
   max-width: 70%;
@@ -53,6 +57,75 @@ main {
   margin: 0 auto;
   clear: left;
 }
+
+/* find me page styles */
+.findfoot {
+  border: 5px solid rgb(148, 122, 65);
+  border-radius: 0 280% 0 0;
+  background-color: rgb(148, 122, 65);
+  height: 20%;
+  width: 100%;
+  z-index: 2;
+  position: relative;
+}
+
+.hills {
+  border: 5px solid rgb(148, 122, 65);
+  border-radius: 255% 0 0 0;
+  background-color: rgb(148, 122, 65);
+  height: 30%;
+}
+
+.well {
+  position: relative;
+  bottom: -130px;
+  z-index: 1;
+  opacity: 0;
+  transition: opacity 5s ease;
+}
+
+.well:hover {
+  opacity: 1;
+}
+
+.quote {
+  height: 500px;
+  background-image: url(images/sand.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.github {
+  color: white;
+  text-decoration: none;
+  position: relative;
+  top: -250px;
+  left: -600px;
+  font-size: 2em;
+  opacity: 0;
+  transition: opacity 5s ease;
+  font-family: 'Shadows Into Light';
+}
+
+.github:hover {
+  opacity: 1;
+}
+
+.email {
+  position: relative;
+  bottom: 175px;
+  right: -500px;
+  opacity: 0;
+  transition: opacity 5s ease;
+  font-size: 1.5em;
+  font-family: 'Shadows Into Light';
+}
+
+.email:hover {
+  opacity: 1;
+}
+
 /* footer styles */
 footer {
   background-color: #00003D;
