--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ main {
   top: 0px;
   position: relative;
   height: 110%;
+  pointer-events: none;
 }
 
 .quote h1 {
@@ -161,4 +162,6 @@ footer a {
   text-decoration: none;
   display: block;
   clear: left;
+  padding: 5px;
+  margin-left: 5px;
 }
