--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,11 @@ main {
   clear: left;
 }
 
+/* article styles */
+article {
+  margin-top: 20px;
+}
+
 /* find me page styles */
 .thestorm {
   background-color: rgb(148, 122, 65);
@@ -153,9 +158,9 @@ main {
 .findwrap {
   background-color: rgba(148, 122, 65, 0.9);
 }
-.no {
 
-}
+.no {}
+
 /* footer styles */
 footer {
   background-color: #00003D;
@@ -170,8 +175,8 @@ footer a {
   padding: 5px;
   margin-left: 5px;
 }
-/* timeline */
 
+/* timeline */
 .timeline .timeline-item::after, .timeline .timeline-item::before {
   clear: both;
   content: '';
@@ -284,20 +289,24 @@ footer a {
     padding: 0;
     width: 90%;
   }
+
   .timeline::before {
     left: 0;
   }
+
   .timeline .timeline-item .timeline-content {
     float: right;
     text-align: left;
     width: 90%;
   }
+
   .timeline .timeline-item .timeline-content::before, .timeline .timeline-item .timeline-content.right::before {
     border-left: 0;
     border-right: 7px solid #fefefe;
     left: 10%;
     margin-left: -6px;
   }
+
   .timeline .timeline-item .timeline-icon {
     left: 0;
   }
