--- a/styles.css
+++ b/styles.css
@@ -157,8 +157,21 @@ article {
   background-color: rgba(148, 122, 65, 0.9);
 }
 
-.no {}
-
+.no {
+right: 0;
+}
+.hills a, .hills p {
+  font-family: 'Josefin Sans', sans-serif;
+  color: white;
+  text-decoration: none;
+  display: block;
+  clear: left;
+  padding: 5px;
+  margin-left: 5px;
+}
+.hillfoot {
+  width: 50%;
+}
 /* footer styles */
 footer {
   background-color: #00003D;
