--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,15 @@ main {
   margin: 0 auto;
   clear: left;
 }
-
+.maindex p{
+  max-width: 50%;
+  margin: 0 auto;
+  padding: 15px 0;
+  font-family: 'Josefin Sans', sans-serif;
+}
+.maindex h1{
+    font-family: 'Anton', sans-serif;
+}
 /* article styles */
 article {
   margin-top: 20px;
@@ -172,7 +180,7 @@ footer a {
   text-decoration: none;
   display: block;
   clear: left;
-  padding: 5px;
+  padding: 10px;
   margin-left: 5px;
 }
 
